Add AlarmReceiver to trigger Bluetooth commands via alarm
Introduced AlarmReceiver to handle scheduled command sending through AlarmManager. Updated AndroidManifest to register the receiver. Added INTENT_ACTION_SEND to Constants and extended SerialService to process and send commands received via this intent.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <service
             android:name=".SerialService"
             android:foregroundServiceType="remoteMessaging|connectedDevice" />
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
